--- a/static/src/stylesheets/module/content/_live-blog.scss
+++ b/static/src/stylesheets/module/content/_live-blog.scss
@@ -87,14 +87,18 @@ $block-padding-right: $gs-gutter;
     padding: $gs-baseline/3 0;
     margin-top: ($gs-baseline/3)*2;
 
-    @include mq($from: tablet) {
-        width: gs-span(1);
-    }
-
     time {
         display: inline-block;
         margin-bottom: $gs-baseline/2;
     }
+}
+
+.published-time {
+
+    @include mq($from: tablet) {
+        width: gs-span(1);
+    }
+
 }
 
 .block-time {
