Remove unused video background variables

--- a/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2.html
+++ b/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2.html
@@ -40,9 +40,8 @@
         <%=data.desktopCTA%>
     </div>
 
-    <div class="slide-video" style="background: url('<%=data.videoBGImage%>') <%=data.videoBGImageRepeat%> <%=data.videoBGImagePosition%>;">
+    <div class="slide-video">
         <div class="slide-container">
-            <div class="ad-exp__layer ad-exp__layer1" style="background: url('<%=data.videoLayer1BGImage%>') <%=data.videoLayer1BGImageRepeat%> <%=data.videoLayer1BGImagePosition%>;"></div>
             <div class="video-container__inner"><%=data.videoEmbed%></div>
         </div>
     </div>
