Add the ability to move the close button inside the video container

--- a/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2.html
+++ b/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2.html
@@ -42,7 +42,10 @@
 
     <div class="slide-video">
         <div class="slide-container">
-            <div class="video-container__inner"><%=data.videoEmbed%></div>
+            <div class="video-container__inner">
+                <%=data.videoEmbed%>
+                <%=data.showPlusInContainer%>
+            </div>
         </div>
     </div>
 
