Move CTAs into the video layer

--- a/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2-cta.html
+++ b/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2-cta.html
@@ -1,1 +1,1 @@
-<a class="creative__cta creative__cta--position-<%=data.image%>" href="<%=data.link%>"><img src="<%=data.image%>" alt></a>
+<a class="creative__cta creative__cta--position-<%=data.image%> <%=data.media%>" href="<%=data.link%>"><img src="<%=data.image%>" alt></a>
