--- a/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2.html
+++ b/static/src/javascripts/projects/commercial/views/creatives/fabric-expandable-video-v2.html
@@ -46,6 +46,8 @@
                 <%=data.videoEmbed%>
                 <%=data.showPlusInContainer%>
             </div>
+            <%=data.mobileCTA%>
+            <%=data.desktopCTA%>
         </div>
     </div>
 
