--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -417,10 +417,10 @@
         position: absolute;
         right: 10px;
         opacity: 0;
-        transition: opacity .2s;
+        transition: opacity .2s 1.2s;
     }
 
-    .ad-exp__expand--opened .creative__cta {
+    .slide-video__expand .creative__cta {
         opacity: 1;
     }
 
