--- a/static/src/stylesheets/module/content/_media-player.scss
+++ b/static/src/stylesheets/module/content/_media-player.scss
@@ -79,77 +79,131 @@ $ima-controls-height: 70px;
     }
 }
 
+// .vjs-big-play-button {
+//     cursor: pointer;
+//     position: absolute;
+//     z-index: 1;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     box-sizing: border-box;
+//     text-align: center;
+//     border: 0;
+//     padding: 0;
+//     background-color: transparent;
+//
+//     .vjs-has-started & {
+//         padding-bottom: $vjs-control-height;
+//     }
+//
+//     &:hover .vjs-control-text {
+//         transform: translate(-50%, -50%) scale(1.15);
+//     }
+//
+//     .vjs-control-text {
+//         // Magic numbers are used here to draw the play arrow and circle as pseudo elements.
+//         @include video-play-button-size($vjs-small-button-size);
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%);
+//         transition: transform 300ms cubic-bezier(.25, .46, .45, .94);
+//         user-select: none;
+//
+//         @include mq(mobileLandscape) {
+//             @include video-play-button-size($vjs-large-button-size);
+//         }
+//
+//         &:before {
+//             @include circular;
+//             @include video-play-button-size($vjs-small-button-size);
+//             content: '';
+//             display: block;
+//             @include mq(mobileLandscape) {
+//                 @include video-play-button-size($vjs-large-button-size);
+//             }
+//             background-color: $media-default;
+//         }
+//
+//         &:after {
+//             content: '';
+//             position: absolute;
+//             top: 50%;
+//             left: 50%;
+//             transform: translate(-40%, -50%);
+//             border-style: solid;
+//             border-width: 1em 0 1em 2.4em;
+//             border-color: transparent transparent transparent $neutral-1;
+//
+//             @include mq(tablet) { // 0 border radius on mobile because stock android has a render bug with it here
+//                 border-radius: .2em;
+//             }
+//         }
+//     }
+//
+//     .gu-media--audio &,
+//     .vjs-has-ended &,
+//     .vjs-ad-playing &,
+//     .vjs-playing &,
+//     .vjs-has-started.vjs-using-native-controls &,
+//     .vjs-ad-loading & {
+//         display: none !important;
+//     }
+// }
+
 .vjs-big-play-button {
-    cursor: pointer;
+  cursor: pointer;
+  display: inline-block;
+  width: auto;
+  z-index: 2;
+  padding: 0 10px 0;
+  position: absolute;
+  bottom: 8px;
+  left: 5px;
+  line-height: 28px;
+  padding-left: 41px;
+  width: auto;
+  height: 44px;
+  color: #161616;
+  border-radius: 46px;
+  border: none;
+  background-color: $media-default;
+  backface-visibility: hidden;
+  &:before {
+    content: attr(data-duration);
+    @include fs-textSans(4);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    margin-top: 14px;
+    padding-right: 7px;
+    padding-left: 8px;
+    margin-left: 4px;
+    border-left: 1px solid rgba(51,51,51,0.6);
+    display: inline-block;
+  }
+  &:after {
+    content: '';
+    border: 1px solid;
+    border-width: 8px 8px 8px 18px;
+    border-color: transparent transparent transparent #333;
     position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    text-align: center;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-
-    .vjs-has-started & {
-        padding-bottom: $vjs-control-height;
-    }
-
-    &:hover .vjs-control-text {
-        transform: translate(-50%, -50%) scale(1.15);
-    }
-
-    .vjs-control-text {
-        // Magic numbers are used here to draw the play arrow and circle as pseudo elements.
-        @include video-play-button-size($vjs-small-button-size);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: transform 300ms cubic-bezier(.25, .46, .45, .94);
-        user-select: none;
-
-        @include mq(mobileLandscape) {
-            @include video-play-button-size($vjs-large-button-size);
-        }
-
-        &:before {
-            @include circular;
-            @include video-play-button-size($vjs-small-button-size);
-            content: '';
-            display: block;
-            @include mq(mobileLandscape) {
-                @include video-play-button-size($vjs-large-button-size);
-            }
-            background-color: $media-default;
-        }
-
-        &:after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-40%, -50%);
-            border-style: solid;
-            border-width: 1em 0 1em 2.4em;
-            border-color: transparent transparent transparent $neutral-1;
-
-            @include mq(tablet) { // 0 border radius on mobile because stock android has a render bug with it here
-                border-radius: .2em;
-            }
-        }
-    }
-
-    .gu-media--audio &,
-    .vjs-has-ended &,
-    .vjs-ad-playing &,
-    .vjs-playing &,
-    .vjs-has-started.vjs-using-native-controls &,
-    .vjs-ad-loading & {
-        display: none !important;
-    }
+    top: 50%;
+    left: 14px;
+    transform: translateY(-50%);
+  }
+  .vjs-control-text {
+    display: none;
+  }
+  .gu-media--audio &,
+  .vjs-has-ended &,
+  .vjs-ad-playing &,
+  .vjs-playing &,
+  .vjs-has-started.vjs-using-native-controls &,
+  .vjs-ad-loading & {
+      display: none !important;
+  }
 }
 
 .vjs-fullscreen-clickbox {
