--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -3,7 +3,7 @@
 
 @import common.LinkTo
 @import views.BodyCleaner
-@import views.support.Commercial.{isBrandedContent, isPaidContent}
+@import views.support.Commercial.isPaidContent
 @import views.support.RenderClasses
 @import views.support.TrailCssClasses.toneClass
 
@@ -46,7 +46,7 @@
                 @fragments.guBand()
             }
 
-            @fragments.headTonal(article, model, isBrandedContent(article, model), amp = amp)
+            @fragments.headTonal(article, model, isPaidContent, amp = amp)
 
             @if(article.tags.isFeature && article.elements.hasShowcaseMainElement) {
                 @fragments.mainMedia(article, amp)
