--- a/common/app/views/fragments/contentMeta.scala.html
+++ b/common/app/views/fragments/contentMeta.scala.html
@@ -1,6 +1,7 @@
 @(item: model.ContentType, page: model.Page, showBadge: Boolean = true, showExtras: Boolean = true)(implicit request: RequestHeader)
 @import conf.switches.Switches.{SaveForLaterSwitch, staticBadgesSwitch}
 @import model._
+@import views.support.Commercial.isPaidContent
 @import views.support.ContentOldAgeDescriber
 
 @byline() = {
@@ -66,7 +67,7 @@
 
     @if(
         (staticBadgesSwitch.isSwitchedOff && showBadge && (item.tags.isVideo || item.tags.isAudio || (item.tags.isArticle && !item.commercial.isAdvertisementFeature))) ||
-            (staticBadgesSwitch.isSwitchedOn && (item.tags.isVideo || item.tags.isAudio))
+            (staticBadgesSwitch.isSwitchedOn && (item.tags.isVideo || item.tags.isAudio || (item.tags.isArticle && !isPaidContent(item, page))))
     ) {
         @fragments.commercial.badge(item, page)
     }
