Properly split out the CSS for these pages

--- a/static/src/stylesheets/head.signup.scss
+++ b/static/src/stylesheets/head.signup.scss
@@ -45,4 +45,4 @@
    Signup
    ========================================================================== */
 
-@import 'module/signup/main';
+@import 'module/signup/signup';
