--- a/commercial/app/views/hosted/guardianHostedArticle2.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle2.scala.html
@@ -23,18 +23,13 @@
                         </div>
 
                         <div class="content__article-body from-content-api js-article__body">
-                            <p class="intro">
-                            @page.standfirst
-                            </p>
+                            <p class="intro">@Html(page.standfirst)</p>
 
-                            @if(page.pageName == "overview"){
-                                @singaporeF1Overview(page)
-                            }
-                            @if(page.pageName == "offtrack"){
-                                @singaporeF1Offtrack(page)
-                            }
-                            @if(page.pageName == "packages"){
-                                @singaporeF1Packages(page)
+                            @page.pageName match {
+                                case "overview" => { @singaporeF1Overview(page) }
+                                case "offtrack" => { @singaporeF1Offtrack(page) }
+                                case "packages" => { @singaporeF1Packages(page) }
+                                case _ => { @Html(page.body) }
                             }
 
                             <div class="hide-on-desktop">
