--- a/static/src/stylesheets/module/survey/_weekend-reading.scss
+++ b/static/src/stylesheets/module/survey/_weekend-reading.scss
@@ -14,10 +14,21 @@
     overflow: hidden;
     position: absolute;
     left: 50%;
-    margin-left: -1400px;
+    margin-left: -80.5rem;
     height: 112%;
     z-index: 100;
+
+    @include mq(tablet) {
+        height: 115%;
+    }
+    @include mq(desktop) {
+        height: 112%;
+        margin-left: -84.5rem;
+    }
+
 }
+
+
 
 .email-signup-main {
     background-color: $features-support-1;
@@ -47,6 +58,7 @@
     content: '';
     display: block;
     border-bottom: 2px solid $features-support-3;
+    margin: 0 .3rem;
 }
 
 .content {
