--- a/commercial/app/views/hosted/guardianHostedArticle2.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle2.scala.html
@@ -3,8 +3,38 @@
 @import views.html.hosted._
 
 @main(page, Some("commercial")) { } {
-    @guardianHostedHeader("hosted-article-page", page.campaign.cssClass, page.campaign.logo.url, page.campaign.owner, page.campaign.logoLink.getOrElse(page.cta.url))
-    <div class="hosted-page l-side-margins hosted__side hosted-article-page @{page.campaign.cssClass}">
+    <!--[if (gt IE 9)|(IEMobile)]><!-->
+    <style>
+    .hosted-tone {
+    color: @{page.campaign.fontColour.brandColour};
+    }
+
+    .hosted-tone-bg {
+    background-color: @{page.campaign.fontColour.brandColour};
+    }
+
+    .hosted-tone-btn,
+    .hosted-tone-btn:focus,
+    .hosted-tone-btn:hover {
+    background-color: @{page.campaign.fontColour.brandColour};
+    border-color: @{page.campaign.fontColour.brandColour};
+    }
+
+    .hosted-page .hosted__next-video--tile {
+    border-top-color: @{page.campaign.fontColour.brandColour};
+    }
+
+    .hosted-page .hosted__link {
+    color: @{page.campaign.fontColour.brandColour};
+    }
+
+    .hosted-page ~ .survey-overlay-simple .survey-text__header {
+    background-color: @{page.campaign.fontColour.brandColour};
+    }
+    </style>
+    <!--<![endif]-->
+    @guardianHostedHeader(if(page.campaign.fontColour.shouldHaveBrightFont) "hosted-article-page hosted-page--bright" else "hosted-article-page", page.campaign.cssClass, page.campaign.logo.url, page.campaign.owner, page.campaign.logoLink.getOrElse(page.cta.url))
+    <div class="hosted-page l-side-margins hosted__side hosted-article-page @if(page.campaign.fontColour.shouldHaveBrightFont) {hosted-page--bright}">
 
         <article id="article" data-test-id="article-root" class="content content--article has-feature-showcase-element section-stage content--advertisement-feature" role="main">
             <div class="media-primary media-content media-primary--showcase" style="background-image: url(@{page.mainPicture});">
