one step close to video js duration

--- a/applications/app/views/videoEmbed.scala.html
+++ b/applications/app/views/videoEmbed.scala.html
@@ -22,6 +22,7 @@
     @defining( page.item ) { video =>
 
         <figure class="gu-video-embed" itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
+          <div>hello world</div>
             <meta itemprop="name" content="@Html(video.trail.headline)"/>
             <meta itemprop="headline" content="@Html(video.trail.headline)"/>
             <meta itemprop="url" content="@video.metadata.url"/>
