--- a/static/src/stylesheets/module/commercial/glabs/_hosted-colours.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-colours.scss
@@ -2,6 +2,7 @@
 $renaultColor: #ffc421;
 $renaultLight: #fff9e9;
 $omgbColor: #e41f13;
+$chesterZooColour: #E31B22;
 $zootropolisColor: #2ec869;
 $zootropolisLight: #d5f4e1;
 $leffeColor: #dec190;
@@ -37,6 +38,33 @@ $singaporef1SecondColour: #f0a93f;
 .hosted-page.visit-britain ~ .survey-overlay-simple {
     .survey-text__header {
         background-color: $omgbColor;
+        color: #ffffff;
+
+        .site-message__close-btn {
+            border-color: #ffffff;
+
+            .inline-cross {
+                fill: #ffffff;
+            }
+        }
+    }
+}
+
+.hosted-tone--chester-zoo {
+    color: $chesterZooColour;
+}
+
+.hosted-tone-bg--chester-zoo {
+    background-color: $chesterZooColour;
+}
+
+.hosted-tone-border--chester-zoo {
+    border-color: $chesterZooColour;
+}
+
+.hosted-page.chester-zoo ~ .survey-overlay-simple {
+    .survey-text__header {
+        background-color: $chesterZooColour;
         color: #ffffff;
 
         .site-message__close-btn {
