--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -182,6 +182,12 @@ $hosted-video-height: 540px;
             }
         }
     }
+
+    p {
+        &:nth-child(2)::first-letter {
+            color: #ffffff;
+        }
+    }
 }
 
 .hosted__glogo {
