New Hosted Gallery for Chester Zoo campaign - adding onward journeys & twitter text

--- a/commercial/app/views/hosted/guardianHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGallery.scala.html
@@ -40,7 +40,7 @@
                         </div>
                         @fragments.inlineSvg("arrow-right", "icon", List("inline-arrow-down"))
                     </div>
-                    @guardianHostedGalleryOj(page.cta.label, page.cta.url, page.cta.btnText, page.nextGalleries, page.brandBackgroundCssClass,  page.brandBorderCssClass, page.brandColourCssClass)
+                    @guardianHostedGalleryOj(page.cta.label, page.cta.url, page.cta.btnText, page.nextPages, page.brandBackgroundCssClass,  page.brandBorderCssClass, page.brandColourCssClass)
                 </div>
                 <div class="hosted__container hosted__container--content hosted-gallery__lower-bar js-gallery-caption-bar">
                     <header class="host__header hosted__social">
