--- a/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
@@ -1,5 +1,5 @@
-@import common.commercial.hosted.HostedGalleryPage
-@(ctaText: Option[String], ctaLink: String, buttonText: Option[String], nextGalleries: List[HostedGalleryPage], backgroundCss: String = "",  borderCss: String = "", textCss: String = "")
+@import common.commercial.hosted.HostedPage
+@(ctaText: Option[String], ctaLink: String, buttonText: Option[String], nextPages: List[HostedPage], backgroundCss: String = "",  borderCss: String = "", textCss: String = "")
     <div class="hosted-gallery__oj js-hosted-gallery-oj">
         <div class="hosted-gallery__oj-cta @borderCss">
             <div class="hosted-gallery__cta-title">
@@ -9,17 +9,17 @@
                 @{buttonText} @fragments.inlineSvg("external-link", "icon")
             </a>
         </div>
-        @for(gallery <- nextGalleries){
-            <a href="@{gallery.pageUrl}" class="hosted-gallery__oj-next-gallery @borderCss">
+        @for(nextPage <- nextPages){
+            <a href="@{nextPage.pageUrl}" class="hosted-gallery__oj-next-gallery @borderCss">
                 <div class="hosted-gallery__next-gallery-title">
                     <div class="hosted-gallery__oj-sub-header @textCss">
                         More
                     </div>
                     <div class="hosted-gallery__cta-title">
-                        @{gallery.title}
+                        @{nextPage.title}
                     </div>
                 </div>
-                <img class="hosted-gallery__next-gallery-image" src="@gallery.images.head.url"/>
+                <img class="hosted-gallery__next-gallery-image" src="@nextPage.imageUrl"/>
             </a>
         }
     </div>
