--- a/static/src/stylesheets/module/commercial/glabs/_hosted-colours.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-colours.scss
@@ -2,7 +2,7 @@
 $renaultColor: #ffc421;
 $renaultLight: #fff9e9;
 $omgbColor: #e41f13;
-$chesterZooColour: #E31B22;
+$chesterZooColour: #e31b22;
 $zootropolisColor: #2ec869;
 $zootropolisLight: #d5f4e1;
 $leffeColor: #dec190;
