--- a/commercial/app/views/hosted/singaporeF1Overview.scala.html
+++ b/commercial/app/views/hosted/singaporeF1Overview.scala.html
@@ -6,11 +6,7 @@
 
 
 <p class="text">
-    <span class="drop-cap @{
-        page.brandBackgroundCssClass
-    }
-    ">S</span>
-    ingapore aglitter with lights by night, breathtaking racing, famous drivers, multi-platinum artists
+    Singapore aglitter with lights by night, breathtaking racing, famous drivers, multi-platinum artists
 
     performing across five stages, a whole city's worth of delicious food and drink, tropical weather, a
 
