--- a/commercial/app/views/hosted/singaporeF1Packages.scala.html
+++ b/commercial/app/views/hosted/singaporeF1Packages.scala.html
@@ -6,11 +6,7 @@
 
 
 <p class="text">
-    <span class="drop-cap @{
-        page.brandBackgroundCssClass
-    }
-    ">G</span>
-    et your flights and tickets to the Singapore GP (and treat yourselves to some R&R afterwards)…
+    Get your flights and tickets to the Singapore GP (and treat yourselves to some R&R afterwards)…
 </p>
 <p class="text">
     It's not too late to get a great deal on a package to the 2016 Formula 1 Singapore Airlines
