Hosted pages - hardcode 'next page' links and cta for composer-fed pages (chester zoo)

--- a/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
@@ -1,5 +1,5 @@
-@import common.commercial.hosted.HostedPage
-@(ctaText: Option[String], ctaLink: String, buttonText: Option[String], nextPages: List[HostedPage], backgroundCss: String = "",  borderCss: String = "", textCss: String = "")
+@import common.commercial.hosted.NextHostedPage
+@(ctaText: Option[String], ctaLink: String, buttonText: Option[String], nextPages: List[NextHostedPage], backgroundCss: String = "",  borderCss: String = "", textCss: String = "")
     <div class="hosted-gallery__oj js-hosted-gallery-oj">
         <div class="hosted-gallery__oj-cta @borderCss">
             <div class="hosted-gallery__cta-title">
