Fix logos in amp

--- a/common/app/views/commercial/cards/itemCard.scala.html
+++ b/common/app/views/commercial/cards/itemCard.scala.html
@@ -11,7 +11,7 @@
   optAdvertClassNames: Option[Seq[String]] = None,
   optClassNames: Option[Seq[String]] = None,
   optImgRatio: Option[String] = None,
-  useCardBranding: Boolean)
+  useCardBranding: Boolean)(implicit request: RequestHeader)
 
 <div class="@CssClassBuilder.linkFromStandardCard(item, optAdvertClassNames, optClassNames, useCardBranding)">
     <a href="@item.targetUrl"
