--- a/common/app/views/commercial/cards/itemLargeCard.scala.html
+++ b/common/app/views/commercial/cards/itemLargeCard.scala.html
@@ -11,7 +11,7 @@
   optAdvertClassNames: Option[Seq[String]] = None,
   optClassNames: Option[Seq[String]] = None,
   optImgRatio: Option[String] = None,
-  useCardBranding: Boolean)
+  useCardBranding: Boolean)(implicit request: RequestHeader)
 
 <a href="@item.targetUrl"
    class="@CssClassBuilder.linkFromLargeCard(item, optAdvertClassNames, optClassNames, useCardBranding)"
