--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -1,11 +1,16 @@
-@(branding: common.commercial.Branding)
+@(branding: common.commercial.Branding)(implicit request: RequestHeader)
 @import common.commercial.PaidContent
+@import implicits.Requests.RichRequestHeader
 
 <div class="brandbadge brandbadge--onside ad-slot--force-display ad-slot--paid-for-badge ad-slot--paid-for-badge--front">
     <div class="brandbadge__inner ad-slot--paid-for-badge__inner">
         <h3 class="brandbadge__header">@branding.label</h3>
         <a href="@branding.sponsorLink" class="brandbadge__link ad-slot--paid-for-badge__link">
-            <img class="brandbadge__logo" src="@branding.sponsorLogo">
+            @if(request.isAmp) {
+                <amp-img class="brandbadge__logo" src="@branding.sponsorLogo" />
+            } else {
+                <img class="brandbadge__logo" src="@branding.sponsorLogo">
+            }
         </a>
         @if(branding.sponsorshipType != PaidContent) {
             <a href="@branding.aboutThisLink" class="brandbadge__help">About this content</a>
