--- a/common/app/views/fragments/media/video.scala.html
+++ b/common/app/views/fragments/media/video.scala.html
@@ -41,7 +41,8 @@
                 data-auto-play="@player.autoPlay"
                 data-show-end-slate="@(player.showEndSlate && showEndSlate)"
                 @if(showPoster) { poster="@player.poster" }
-                data-duration="@player.video.videos.duration.toString()"
+                data-duration="@player.video.videos.formattedDuration.toString()"
+                data-formatted-duration="@player.video.videos.formattedDuration.toString()"
                 data-media-id="@player.video.properties.id"
                 data-end-slate="@player.endSlatePath"
                 data-block-video-ads="@player.blockVideoAds"
