--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -1,8 +1,8 @@
-@(branding: common.commercial.Branding)(implicit request: RequestHeader)
+@(branding: common.commercial.Branding, isInteractivePage: Boolean = false)(implicit request: RequestHeader)
 @import common.commercial.PaidContent
 @import implicits.Requests.RichRequestHeader
 
-<div class="brandbadge brandbadge--onside ad-slot--force-display ad-slot--paid-for-badge ad-slot--paid-for-badge--front">
+<div class="brandbadge brandbadge--onside ad-slot--force-display ad-slot--paid-for-badge ad-slot--paid-for-badge--front @if(isInteractivePage) {ad-slot--paid-for-badge--interactive}">
     <div class="brandbadge__inner ad-slot--paid-for-badge__inner">
         <h3 class="brandbadge__header">@branding.label</h3>
         <a href="@branding.sponsorLink" class="brandbadge__link ad-slot--paid-for-badge__link">
