Chester Zoo - a few minor fixes

--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -183,7 +183,7 @@ $hosted-video-height: 540px;
         }
     }
 
-    p:not(.hosted__next-page-title) {
+    p:not(.hosted__next-page-title):not(.hosted__next-video-title) {
         &:nth-child(2)::first-letter {
             color: #ffffff;
         }
