--- a/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
@@ -99,7 +99,7 @@
         font-size: 30px;
         line-height: 32px;
     }
-    &:hover {
+    &:hover, &:active {
         text-decoration: none;
     }
 }
@@ -154,7 +154,7 @@
     flex-wrap: wrap-reverse;
     align-items: flex-end;
     align-content: flex-end;
-    &:hover {
+    &:hover, &:active {
         text-decoration: none;
     }
     &:nth-child(3) {
@@ -166,7 +166,7 @@
 
 .hosted-gallery__next-gallery-title {
     flex: 1;
-    min-width: 90px;
+    min-width: 100px;
 }
 
 .hosted-gallery__next-gallery-image {
@@ -202,7 +202,8 @@
     margin: 16px 0;
     color: #ffffff;
     font-weight: bold;
-    &:hover {
+    text-align: center;
+    &:hover, &:active {
         text-decoration: none;
     }
 
@@ -382,7 +383,7 @@ $approxGalleryWidth: calc(167vh - #{5/3 * ($headerHeight + $footerHeight)});
 .hosted-gallery__caption {
     @include f-headlineSans;
     font-size: 13px;
-    line-height: 39px;
+    height: 40px;
     color: $neutral-7;
     position: absolute;
     right: 50px;
@@ -395,6 +396,18 @@ $approxGalleryWidth: calc(167vh - #{5/3 * ($headerHeight + $footerHeight)});
     &.current-caption {
         opacity: 1;
         visibility: visible;
+    }
+}
+
+.hosted-gallery__image-title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    line-height: 20px;
+    height: 100%;
+    padding-top: 2px;
+    span {
+        max-height: 40px;
     }
 }
 
