--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -599,11 +599,6 @@ $hosted-video-height: 540px;
     @include mq(desktop) {
         padding-top: 270px;
     }
-
-    a {
-        // hack stop the link underline
-        color: transparent;
-    }
 }
 
 .hosted__cta-btn-wrapper {
@@ -707,6 +702,9 @@ $hosted-video-height: 540px;
     display: block;
     width: 100%;
     height: 100%;
+    // hack stop the link underline
+    color: transparent;
+    outline: none;
 
     &:hover {
         background-color: rgba(#333333, .2);
@@ -715,7 +713,7 @@ $hosted-video-height: 540px;
 
 .hosted__cta-link,
 .hosted__next-video--tile {
-    &:hover {
+    &:hover, &:active {
         text-decoration: none;
     }
 }
