bunch of small fixes

--- a/commercial/app/views/hosted/guardianHostedArticle2.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle2.scala.html
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="hosted__standfirst">
-                            <div class="hosted__terms">​Hosted content is used to describe content that is paid for and supplied by the advertiser Find out more with our
+                            <div class="hosted__terms">​Hosted content is used to describe content that is paid for and supplied by the advertiser. Find out more with our
                                 <div class="paidfor-label paidfor-meta__more has-popup hosted__link">
                                     <button class="u-button-reset paidfor-label__btn hosted__label-btn--small popup__toggle hosted__label-btn js-hosted-about @{page.brandColourCssClass}" data-link-name="terms-and-conditions-text-link">commercial content explainer.</button>
                                 </div>
