--- a/commercial/app/views/hosted/guardianHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGallery.scala.html
@@ -10,7 +10,7 @@
                 <div class="js-hosted-gallery-container hosted-gallery__gallery-container">
                     <div class="js-hosted-gallery-images hosted-gallery__images-container">
                         @guardianHostedGalleryImage(page.images.head, {
-                            <div class="hosted-gallery__meta">
+                            <div class="hosted-gallery__meta js-hosted-gallery-meta">
                                 <div class="content__main-column">
                                     <h1 class="hosted-gallery__heading">{page.title}</h1>
                                     <h3 class="hosted-gallery__sub-heading">{page.standfirst}</h3>
