--- a/static/src/stylesheets/head.content.scss
+++ b/static/src/stylesheets/head.content.scss
@@ -23,6 +23,7 @@
 @import 'module/_live-pulse';
 @import 'module/_chapters';
 @import 'module/content/_article-immersive';
+@import 'module/content/_article-heroic';
 @import 'module/content/_article-minute';
 @import 'module/content/_gallery.head.scss';
 @import 'module/_badging';
