Add CSS filter to fix dark logos on media tone

--- a/static/src/stylesheets/module/content/tones/_tone-media.scss
+++ b/static/src/stylesheets/module/content/tones/_tone-media.scss
@@ -60,10 +60,10 @@
 
     .brandbadge__header,
     .brandbadge__help,
-
     .brandbadge__logo {
         filter: invert(50%);
-    }
+    },
+
 
     .ad-slot--paid-for-badge__header,
     .ad-slot--paid-for-badge__help {
