Limit scope of MQ for inline liveblog ads

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -649,7 +649,7 @@
     padding-bottom: 0;
 
     &.ad-slot--liveblog-inline {
-        @include mq(mobile) {
+        @include mq(mobile, $until: mobileLandscape) {
             margin-left: $gs-gutter / -2;
             margin-right: $gs-gutter / -2;
         }
