Fix for logo contrast issues on media tone tones

--- a/static/src/stylesheets/module/content/tones/_tone-media.scss
+++ b/static/src/stylesheets/module/content/tones/_tone-media.scss
@@ -62,7 +62,7 @@
     .brandbadge__help,
     .brandbadge__logo {
         filter: invert(50%);
-    },
+    }
 
 
     .ad-slot--paid-for-badge__header,
