move details polyfill inline

--- a/common/app/views/fragments/inlineJSBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSBlocking.scala.html
@@ -31,6 +31,9 @@
     // Polyfill Element.matches
     @InlineJs(matches().body, "matches.js")
 
+    // Polyfill details
+    @InlineJs(details().body, "details.js")
+
 
     // ************* CONFIG *************
 
