(iOS) Hide the video when ad is collapsed

--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -444,6 +444,9 @@
         }
     }
 
+    .slide-video:not(.slide-video__expand) .expandable-video {
+        display: none;
+    }
 
     .slide-video__expand .creative__cta {
         opacity: 1;
